--- a/runners/taker_unixrun/CMakeLists.txt
+++ b/runners/taker_unixrun/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.0.2)
 project(taker_unixrun)
 
+set(CMAKE_CXX_STANDARD 14)
+
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/../../cmake/)
 
 find_package(JsonCpp 1 EXACT REQUIRED)
