Fix compiler warnings

--- a/runners/taker_unixrun/CMakeLists.txt
+++ b/runners/taker_unixrun/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.0.2)
 project(taker_unixrun)
 
 set(CMAKE_CXX_STANDARD 14)
+add_compile_options(-Wall -Wextra -pedantic -Weffc++ -Werror)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/../../cmake/)
 
