Add more runner tests

--- a/runners/tests/CMakeLists.txt
+++ b/runners/tests/CMakeLists.txt
@@ -11,3 +11,8 @@ add_executable(worky_test worky_test.cpp)
 add_executable(memory_test memory_test.cpp)
 add_executable(vector_test vector_test.cpp)
 add_executable(vector_pushback_test vector_pushback_test.cpp)
+add_executable(alloc1_test alloc1_test.cpp)
+add_executable(alloc2_test alloc2_test.cpp)
+add_executable(env_test env_test.cpp)
+add_executable(runerror_test runerror_test.cpp)
+add_executable(args_test args_test.cpp)
