Add test with broken exe

--- a/runners/tests/CMakeLists.txt
+++ b/runners/tests/CMakeLists.txt
@@ -4,6 +4,7 @@ project(tests)
 set(CMAKE_CXX_STANDARD 14)
 add_compile_options(-Wall -Wextra -pedantic -Weffc++ -Werror)
 
+add_executable(cut_exe cut_exe.cpp)
 
 add_executable(basic_test basic_test.cpp)
 add_executable(sleepy_test sleepy_test.cpp)
@@ -16,3 +17,13 @@ add_executable(alloc2_test alloc2_test.cpp)
 add_executable(env_test env_test.cpp)
 add_executable(runerror_test runerror_test.cpp)
 add_executable(args_test args_test.cpp)
+
+add_custom_command(
+    COMMAND "cut_exe${CMAKE_EXECUTABLE_SUFFIX}"
+            "basic_test${CMAKE_EXECUTABLE_SUFFIX}"
+            "broken_test${CMAKE_EXECUTABLE_SUFFIX}"
+    OUTPUT "broken_test${CMAKE_EXECUTABLE_SUFFIX}"
+    DEPENDS basic_test cut_exe
+)
+
+add_custom_target(more_tests DEPENDS "broken_test${CMAKE_EXECUTABLE_SUFFIX}")
