--- a/.editorconfig
+++ b/.editorconfig
@@ -15,6 +15,11 @@ indent_style = space
 indent_size = 2
 tab_width = 2
 
+[*.sh]
+indent_style = space
+indent_size = 2
+tab_width = 2
+
 [*.py]
 indent_style = space
 indent_size = 4
