--- a/taskbuilder/tests/.editorconfig
+++ b/taskbuilder/tests/.editorconfig
@@ -1,4 +1,6 @@
-[*rule*.make]
-insert_final_newline = false
+[*.make]
 indent_style = tab
 tab_width = 4
+
+[*rule*.make]
+insert_final_newline = false
