--- a/src/runners/taker_unixrun/CMakeLists.txt
+++ b/src/runners/taker_unixrun/CMakeLists.txt
@@ -4,7 +4,7 @@ project(taker_unixrun)
 set(CMAKE_CXX_STANDARD 14)
 add_compile_options(-Wall -Wextra -pedantic -Weffc++ -Werror)
 
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/../../cmake/)
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/../../../cmake/)
 
 find_package(JsonCpp 1 EXACT REQUIRED)
 
