Fix in .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
   - "3.5"
   - "3.6"
   - "3.7"
-before-install:
+before_install:
   - sudo apt-get update
   - sudo apt-get install g++ cmake libjsoncpp-dev
 install:
