--- a/.editorconfig
+++ b/.editorconfig
@@ -6,6 +6,11 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 charset = utf-8
 
+[*.{yml,yaml}]
+indent_style = space
+indent_size = 2
+tab_width = 2
+
 [Makefile]
 indent_style = tab
 tab_width = 4
