--- a/.travis.yml
+++ b/.travis.yml
@@ -28,15 +28,15 @@ matrix:
   - name: "Python: 3.5"
     os: osx
     language: generic
-    env: PYTHON=3.5.6
+    env: PYTHON=3.5.6 COVERAGE=1
   - name: "Python: 3.6"
     os: osx
     language: generic
-    env: PYTHON=3.6.8
+    env: PYTHON=3.6.8 COVERAGE=1
   - name: "Python: 3.7"
     os: osx
     language: generic
-    env: PYTHON=3.7.2
+    env: PYTHON=3.7.2 COVERAGE=1
 
 before_install: |
   if [ "$TRAVIS_OS_NAME" == "osx" ]; then
