--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,7 @@ matrix:
 
 before_install: |
   if [ "$TRAVIS_OS_NAME" == "osx" ]; then
+    pyenv install --list
     pyenv install $PYTHON
     export PYENV_VERSION=$PYTHON
     export PATH="/Users/travis/.pyenv/shims:${PATH}"
