--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,17 @@
 os: linux
 dist: xenial
 
+cache:
+  directories:
+    - $HOME/Library/Caches/Homebrew
+    - /usr/local/Homebrew
+
+before_cache:
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then brew cleanup; fi
+# Credit https://discourse.brew.sh/t/best-practice-for-homebrew-on-travis-brew-update-is-5min-to-build-time/5215/9
+# Cache only .git files under "/usr/local/Homebrew" so "brew update" does not take 5min every build
+  - if [ "${TRAVIS_OS_NAME}" = "osx" ]; then find /usr/local/Homebrew \! -regex ".+\.git.+" -delete; fi
+
 addons:
   apt:
     packages:
@@ -27,19 +38,22 @@ matrix:
   include:
   - name: "Python: 3.5"
     os: osx
-    osx_image: xcode12
+    osx_image: xcode11
     language: generic
     env: PYTHON=3.5.5 COVERAGE=1
+    update: true
   - name: "Python: 3.6"
     os: osx
-    osx_image: xcode12
+    osx_image: xcode11
     language: generic
     env: PYTHON=3.6.5 COVERAGE=1
+    update: true
   - name: "Python: 3.7"
     os: osx
-    osx_image: xcode12
+    osx_image: xcode11
     language: generic
     env: PYTHON=3.7.3 COVERAGE=1
+    update: true
 
 before_install: |
   if [ "$TRAVIS_OS_NAME" == "osx" ]; then
